<resources>
    <string name="app_name">BMICalculatorDemo</string>
    <string name="strCurrentHeight">%1$d cm</string>
    <string name="strLabelHeight">Height</string>
    <string name="strCalculateYourBmi">Calculate your BMI</string>
    <string name="strFemale">Female</string>
    <string name="strMale">Male</string>
    <string name="strAge">Age</string>
    <string name="strWeight">Weight</string>
    <string name="strDecrement">Decrement</string>
    <string name="strIncrement">Increment</string>
    <string name="strBmiCalculator">BMI CALCULATOR</string>
    <string name="strGender">Gender</string>
    <string name="strYourBmiCategoryIs">YOUR BMI CATEGORY IS</string>
    <string name="strReCalculateYourBmi">Recalculate your BMI</string>
    <string name="strBmiFinalLogo">Bmi final logo</string>
    <string name="strResultLogo">Result logo</string>
    <string name="strSelectGenderFirst">Select your gender first!</string>
</resources>